# cpp-oasvalidator

./: .buildinfo  .clang-lint-ignore  .clang-tidy  .gitignore  .gitmodules  API.md  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE  README.md  benchmark.html  benchmark_report.html  class_dia.puml  classdiagram.html  codecov.html  codecov.yml  genindex.html  index.html  lint.py  oasvalidator.html  objects.inv  search.html  searchindex.js
.doctrees/: benchmark.doctree  classdiagram.doctree  codecov.doctree  environment.pickle  genindex.doctree  index.doctree  oasvalidator.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.license-scripts/: COPYRIGHT-HEADER  EE-LICENSE  license-checker.sh  remove-license.sh
_sources/: benchmark.rst.txt  classdiagram.rst.txt  index.rst.txt  oasvalidator.rst.txt
api/: classArrayDeserializer.html  classBaseDeserializer.html  classBaseValidator.html  classBodyValidator.html  classContentDeserializer.html  classDeserializationException.html  classHeaderParamValidator.html  classJsonValidator.html  classMethodValidator.html  classOASValidator.html  classOASValidatorImp.html  classObjectDeserializer.html  classParamValidator.html  classPathParamValidator.html  classPathTrie.html  classPrimitiveDeserializer.html  classQueryParamValidator.html  classValidatorInitExc.html  classValidatorsStore.html  define_common_8hpp_1a838ca36f37b19a874eabd4eeff5be860.html  define_common_8hpp_1a8eafe4836a90504d10ce945bd8aaca0b.html  define_oas__validator_8hpp_1a838ca36f37b19a874eabd4eeff5be860.html  dir_deserializers.html  dir_utils.html  dir_validators.html  enum_common_8hpp_1a1ff35fa09f5edbd315e3fa9999983f2b.html  enum_common_8hpp_1a240c1924416689e5700ff0d9f30539d9.html  enum_common_8hpp_1a4353a75834bb35c4acd80b51434eef59.html  enum_common_8hpp_1a643d48752abc8b74ba2284a8b264bbc7.html  enum_common_8hpp_1ab48fecf14b8eafb9688c36303f032401.html  enum_common_8hpp_1ac7b092659a3a26b190537c0b322ca427.html  enum_oas__validator_8hpp_1a1ff35fa09f5edbd315e3fa9999983f2b.html  file_deserializers_array_deserializer.hpp.html  file_deserializers_base_deserializer.hpp.html  file_deserializers_content_deserializer.hpp.html  file_deserializers_object_deserializer.hpp.html  file_deserializers_primitive_deserializer.hpp.html  file_oas_validator.hpp.html  file_oas_validator_imp.hpp.html  file_utils_common.hpp.html  (+35 more)
cmake/: CodeCoverage.cmake  FindGTestSrc.cmake  FindSphinx.cmake  OASValidatorConfig.cmake.in  SetCompilerFlags.cmake
covhtml-oasvalidator/: index.CMakeCCompilerId.c.3d36a8cd6ed177ac85a2911760c06f09.html  index.CMakeCCompilerId.c.cb894c5a10cd8984192a7628438fe94e.html  index.CMakeCCompilerId.c.cc1fdc5f9508bfa65e57c053db1bc262.html  index.CMakeCCompilerId.c.f56694ea3193a6e08142d7b5e3a654ae.html  index.allocators.h.3c70d487ed6e3613839f87e70958be3d.html  index.array_deserializer.cpp.188ff15eb20092c1f63731cfbc97f82c.html  index.array_deserializer.cpp.af57d12a11d90ea410353ab1ffb5cbd8.html  index.array_deserializer.hpp.d821d73f0d767098b4df6f7604c8c3c5.html  index.base_deserializer.cpp.7caf4bece2110eac03067060fd97e26a.html  index.base_deserializer.hpp.c87cf280df18f57b3fef6b218dec93a8.html  index.base_validator.cpp.5788c696cfdf592f70aa62831a0eae93.html  index.base_validator.hpp.5ead94b4d817e0638e7c62ad2a8fef9a.html  index.benchmark.cc.e16f0af2f6adfb36bcfed65bfb10f8d0.html  index.benchmark.h.b0b383366e5d1781e985298452827b25.html  index.benchmark_api_internal.cc.cb04a23a0bad52587485b69b82898b5c.html  index.benchmark_api_internal.h.638cd12220084c447c9bb1c589f81aba.html  index.benchmark_name.cc.47d300e82db459395e24281c331ca705.html  index.benchmark_register.cc.2b44536c3d58174fd9640fd4defe733a.html  index.benchmark_register.h.4854aa2a83e03debf2d21c14d0b0e41d.html  index.benchmark_runner.cc.29c58a76ccda4b0a1aca4102bfe56c23.html  index.benchmark_runner.h.2578a7c274013fe1dc27ef258238920c.html  index.body_validator.cpp.4065ab7ad005c697676bd4662b5956ae.html  index.body_validator.hpp.5900e7eb1296030f36726ff534d10e68.html  index.check.cc.bbc344c6ca15e8bf530ffbee555f546d.html  index.colorprint.cc.9a238e51f9d15267ad1a5e9280096359.html  index.commandlineflags.cc.e951773cca853e1e75999378b3462002.html  index.common.hpp.97f37bf742f5052b8438bb61c517ae68.html  index.complexity.cc.f634e033513c785dde18f07a34ad2a52.html  index.complexity.h.a5c022fcd835f150d4741949370b5b19.html  index.console_reporter.cc.b42e7f70ce17817adf555425938e89cd.html  index.content_deserializer.cpp.57f26e76ce06904e4bd4af5b174aef20.html  index.content_deserializer.cpp.d77221e0e65297e6662cf81e0b74f82b.html  index.content_deserializer.hpp.583a616222c0a36ca90d4a01a951bc87.html  index.counter.cc.a1fc7dcfde0b787552877d469c72e88e.html  index.csv_reporter.cc.fa41529b13ff48bb6e9011e27589b0a7.html  index.cycleclock.h.681410b596d353ae90d0169c29304507.html  index.document.h.3bcc6227c59fd4bef916f328fc5961bd.html  index.en.h.736c92706f23a19c45d0ce93bee60327.html  index.encodings.h.8c21b44224fa36a735f9f4d076116be1.html  index.error.h.dfff842b3bba784cfec27aab4369a9ac.html  (+82 more)
data/: openAPI_example.json
docs/: CMakeLists.txt  Doxyfile.in  classdiagram.puml.in  classdiagram.rst.in  codecov.rst.in  conf.py.in  index.rst.in  oasvalidator.rst.in
example/: CMakeLists.txt  example.cpp  openAPI_example.json
include/: base_validator.hpp  body_validator.hpp  common.hpp  json_validator.hpp  method_validator.hpp  oas_validator.hpp  oas_validator_imp.hpp  param_validators.hpp  path_trie.hpp  validators_store.hpp
src/: base_validator.cpp  json_validator.cpp  method_validator.cpp  oas_validator.cpp  oas_validator_imp.cpp  param_deserializers.cpp  param_validators.cpp  path_trie.cpp  (+1 more)
test/perftest/: CMakeLists.txt
test/perftest/src/: perftest.cpp
test/unittest/: CMakeLists.txt
test/unittest/src/: main.cpp  oas_validator.cpp
test/unittest/src/deserializers/: array_deserializer.cpp  content_deserializer.cpp  object_deserializer.cpp  primitive_deserializer.cpp
test/unittest/src/utils/: path_trie.cpp
test/unittest/src/validators/: body_validator.cpp  header_param_validator.cpp  method_validator.cpp  path_param_validators.cpp  query_param_validator.cpp
(+185 files in other folders)
